syntax = "proto3";

package dolt;

message ActionRequest {
    State state = 1;
    bytes action = 2;
}

message ActionResponse {
    State state = 1;
    bytes response = 2;
}

message QueryRequest {
    State state = 1;
    bytes query = 2;
}

message QueryResponse {
    bytes response = 1;
}

message Request {
    oneof method {
        ActionRequest action_request = 1;
        QueryRequest query_request = 2;
    }
}

message Response {
    oneof method {
        ActionResponse action_response = 1;
        QueryResponse query_response = 2;
    }
}

message State {
    bytes serialized = 1;
}